--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* 
+
 .center {
   text-align: center;
 }
@@ -7,7 +7,7 @@ ul {
     padding: 0;
 }
  
-ul li {
+.guess{
     display: inline;
     border: solid 1px black;
     background-color: white;
@@ -43,7 +43,7 @@ img {
     border-radius: 90%;
 }
 
-#go-button {
+#go-button{
     position: absolute;
     top:110px;
     left:110px;
@@ -64,7 +64,10 @@ body{
 #app {
     padding: 10px 0;
     background-color: rgba(216, 191, 212, 0.5);
-} */
+}
+
+
+/* 
 
 .center {
     text-align: center;
@@ -78,7 +81,7 @@ ul {
 img {
     display: inline;
     width: 200px;
-    height: 100px;
+    height: 70px;
 }
 
 #footer {
@@ -103,6 +106,7 @@ img {
     width: 160px;
     height: 160px;
     font-size: 60px;
+    text-align: center;
 }
 
 #submit {
@@ -133,4 +137,4 @@ body {
     margin: 50px auto;
     background-color: rgba(256, 256, 256, 0.5)
 }
-
+ */
